syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service AiService{
  rpc ProcessPhoto(ProcessPhotoRequest) returns (ProcessPhotoResponse) ;
}

message ProcessPhotoRequest{
  string id = 1;
  string url = 2;
}

message ProcessPhotoResponse{
  int64 status = 1;
  string error = 2;
}
