syntax = "proto3";

package photo;

option go_package = ".pkg/pb";

import "google/protobuf/timestamp.proto";

service PhotoService{
  rpc UpdatePhotographerPhoto(UpdatePhotographerPhotoRequest) returns (UpdatePhotographerPhotoResponse);
  rpc UpdateFaceRecogPhoto (UpdateFaceRecogPhotoRequest) returns (UpdateFaceRecogPhotoResponse);  
  rpc CreatePhoto(CreatePhotoRequest) returns (CreatePhotoResponse);
  rpc UpdatePhotoDetail(UpdatePhotoDetailRequest) returns (UpdatePhotoDetailResponse);

}

message Photo {
  string id = 1;
  string creator_id = 2;
  string title = 3;
  string owned_by_user_id = 4;
  string compressed_url = 5;
  string is_this_you_url = 6;
  string your_moments_url = 7;
  string collection_url = 8;

  int32 price = 9;
  string price_str = 10;

  google.protobuf.Timestamp original_at = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;

  PhotoDetail detail = 14; // Tambahkan ini
}

message PhotoDetail {
  string id = 1;
  string photo_id = 2;
  string file_name = 3;
  string file_key = 4;
  int64 size = 5;
  string type = 6;
  string checksum = 7;
  int32 width = 8;   // int8 di Go, gunakan int32 di proto karena tidak ada int8
  int32 height = 9;
  string url = 10;
  string your_moments_type = 11; // Enum nanti bisa kita define kalau perlu

  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message CreatePhotoRequest {
  Photo photo = 1;
}

message CreatePhotoResponse {
  int64 status = 1;
  string error = 2;
}

message UpdatePhotoDetailRequest {
  PhotoDetail photoDetail = 1;
}

message UpdatePhotoDetailResponse {
  int64 status = 1;
  string error = 2;
}

message UpdatePhotographerPhotoRequest {
  string id = 1;
  repeated string user_id = 2; // Gunakan repeated untuk array
}

message UpdatePhotographerPhotoResponse {
  int64 status = 1;
  string error = 2;
}

message UpdateFaceRecogPhotoRequest {
  string id = 1;
  repeated string photo_id = 2; // Gunakan repeated untuk array
}

message UpdateFaceRecogPhotoResponse {
  int64 status = 1;
  string error = 2;
}